# langchain-agent-fast-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: brainstorm-spec.md  create-spec.md  create-tasks.md  execute-task.md  execute-tasks.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/complete-tasks/: SKILL.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/create-tasks/: SKILL.md
.claude/skills/execute-task/: SKILL.md
.claude/skills/execute-tasks/: SKILL.md
.claude/specs/2026-06-11-langchain-streamlit-agent/: brainstorm.md  spec-lite.md  spec.md  tasks.md
.claude/specs/2026-06-11-langchain-streamlit-agent/sub-specs/: technical-spec.md
.github/workflows/: ci.yml
frontend/: .env.example  Dockerfile  agent.py  app.py  config.py  system_prompt.md
mcp_server/: Dockerfile  pyproject.toml
mcp_server/src/mcp_server/: __init__.py  database.py  main.py
mcp_server/src/mcp_server/tools/: __init__.py  products.py  users.py
mcp_server/tests/: test_database.py  test_main.py  test_mcp_tools_integration.py  test_tools.py
postgres-init/: init.sql
tests/: conftest.py  test_agent.py  test_config.py
tests/bdd/: test_frontend.py  test_mcp_server.py
tests/features/: frontend.feature  mcp_server.feature
