[project]
name = "langchain-agent-fast-mcp"
version = "0.1.0"
description = "LangGraph Streamlit agent with FastMCP tools"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-mcp-adapters>=0.1",
    "langchain-ollama>=0.2",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "langchain>=1.3.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
    "pytest-bdd>=8.0",
    "httpx>=0.27",
    "taskipy>=1.12",
    "black>=24.0",
    "ruff>=0.8",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.taskipy.tasks]
lint = "ruff check frontend/ tests/"
format = "black frontend/ tests/"
unit-test = "pytest tests/ --ignore=tests/bdd"
check = "task format && task lint && task unit-test"
run-stack = "docker compose up --build"
mcp-bdd = "docker compose up --build -d --wait && pytest tests/bdd/test_mcp_server.py && docker compose down"
frontend-bdd = "docker compose up --build -d --wait && pytest tests/bdd/test_frontend.py -v --headed && docker compose down"
frontend-headless-bdd = "docker compose up --build -d --wait && pytest tests/bdd/test_frontend.py -v && docker compose down"
ci = "task check && task mcp-bdd"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
