[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server"
version = "0.1.0"
description = "FastMCP tool server backed by PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "asyncpg>=0.31.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "black>=24.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
target-version = ["py312"]
line-length = 100
